# path-finder

./: CMakeLists.txt  input-form.cpp  input-form.h  main-window.h  main.cpp  path-manager.cpp  path-manager.h  read  read.md
data/: requastes.txt  traffic-paths.txt
